--- a/code_converter/src/App.css
+++ b/code_converter/src/App.css
@@ -56,6 +56,17 @@ textarea {
   outline: none;
   font-size: 1rem;
 }
+.heading_child{
+  display: flex;
+  justify-content: start;
+  width: 100%;
+  border: 1px solid red;
+  padding: 10px 10px;
+  box-sizing: border-box;
+}
+.heading_child>select{
+  padding: 7px 20px;
+}
 
 /* 
 
