--- a/code_converter/src/App.css
+++ b/code_converter/src/App.css
@@ -40,10 +40,19 @@ h1{
 .code_converter_child_right {
   text-align: left;
   /* border: 1px solid red; */
+  box-sizing: border-box;
+  border: 2px solid #646cff;
+  border-radius: 5px;
+  height: 80vh;
   width: 50%;
   padding: 10px;
   display: flex;
   flex-direction: column;
+}
+.code_converter_child_right>pre{
+  /* border: 1px solid red; */
+  height: 100%;
+  overflow-y: scroll;
 }
 textarea {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -58,8 +67,9 @@ textarea {
 }
 .heading_child{
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   width: 100%;
+
   /* border: 1px solid red; */
   padding: 10px 10px;
   box-sizing: border-box;
