--- a/code_converter/src/index.css
+++ b/code_converter/src/index.css
@@ -33,14 +33,14 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0rem 1em;
   font-size: 1.5em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-  width: 100%;
+  /* width: 100%; */
 }
 button:hover {
   border-color: #646cff;
